--- a/css/hoja-de-estilos.css
+++ b/css/hoja-de-estilos.css
@@ -32,7 +32,7 @@ body{
 }
 #menu a:hover{   /* para modificar las animaciones de los botones*/
     color: bisque;
-    background-color: darkgray;
+    background-color: #6fa8dc;
 
 }
 #menu a:active{ /*cambiar color al hacer click al boton*/
@@ -65,13 +65,21 @@ body{
   margin-left: 0;
 
 }
+#sec_que_dedico{
+    
+    text-align: center;
+    background-color: #6fa8dc;
+    
+
+}
 #sec_que_dedico hr{
-    background-color: white;
-    width: 30%;
+    background-color: black;
+    width: 10%;
     height: 3px;
-    border-radius: 50%;
+    border-radius: 30%;
     transform: rotate(1deg);
     margin-left: 0;
+    
 }
 
 #sec_como_ayudarte{
@@ -85,6 +93,8 @@ body{
 }
 #sec_como_ayudarte #sec_servicios .art_tz{
 margin-left: 15px;
+margin-right: 15px;
+
 
 }
 #sec_como_ayudarte #sec_servicios article{
@@ -99,7 +109,10 @@ margin-left: 15px;
 #sec_herramientas{
     color: white;
     text-align: center;
-    background-color: thistle;
+    background-color: #6fa8dc;
+}
+#sec_herramientas table{
+    margin: auto;
 }
 #sec_herramientas table tbody img{
     width: 40%;
